# gollek

./: .gitignore  .gitmodules  API_EXAMPLES.md  API_QUICK_REFERENCE.md  API_TEST_SCRIPT.sh  DummyTest.java  LICENSE.md  MCP-2025-11-25-COMPLIANCE.md  MCP-CONSOLIDATION-COMPLETE.md  MCP-CONSOLIDATION-PLAN.md  Makefile.native  QUICKSTART.md  README.md  README_API.md  SD_WEBSITE_EXAMPLES_SUMMARY.md  TestFloat.java  TestMemoryCopy.java  TestMetal.java  TokenizerTest.java  artifact_ids.txt  build.gradle.kts  build.sh  class_usage_state.json  create-builder-script.sh  dead_code_report.md  dependency_refs.txt  dependency_tree.txt  deps.txt  deps_compile.txt  exclude_hybrid.py  exclude_more.py  exclude_sdk.py  extract.py  find_unused.sh  fix_all.py  fix_all_getters.py  fix_all_plugins.py  fix_cli_getters.py  fix_cli_getters_2.py  fix_compiler_errors.py  (+43 more)
.qwen/: settings.json  settings.json.orig
backend/: pom.xml
backend/metal/gollek-mlx-binding/src/main/cpp/: CMakeLists.txt
backend/metal/gollek-mlx-binding/src/main/cpp/mlx_bridge/: gollek_mlx_bridge.cpp
bom/: pom.xml
config/: default.config.yaml
core/: .gitignore  pom.xml
docs/: AGENT.md  AUTOROUND_IMPROVEMENTS.md  AWQ_QUANTIZER_IMPROVEMENTS.md  COMPLETE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEVELOPER_SETUP.md  FAST_BYTE_LATENT_TRANSFORMER_INTEGRATION_PLAN.md  FINAL.md  FINAL_IMPLEMENTATION_REPORT.md  GAMELAN_LLM_INTEGRATION.md  GENERATIVE_RECURSIVE_REASONING_INTEGRATION_PLAN.md  GOLEK_RELEASE_README.md  GPTQ_ARCHITECTURE.md  GPTQ_CLI_REFACTORING.md  GPTQ_QUANTIZER_IMPROVEMENTS.md  GPTQ_REFACTORING_FINAL_SUMMARY.md  GPTQ_REFACTORING_SUMMARY.md  IMPLEMENTATION_COMPLETE_FINAL.md  KERNEL_PLUGIN_IMPROVEMENTS_COMPLETE.md  KERNEL_PLUGIN_INTEGRATION_COMPLETE.md  KERNEL_PLUGIN_SYSTEM.md  MASTER_IMPLEMENTATION_REPORT.md  PACKAGE_MANAGER_GUIDE.md  PRODUCTION_READINESS_SUMMARY.md  QUANTIZER_INTEGRATION_GUIDE.md  RELEASE_GUIDE.md  SKILLS.md  TURBOQUANT_IMPROVEMENTS.md  TURBOQUANT_INTEGRATION_WITH_PHASE1_KVCACHE.md  TURBOQUANT_PHASE1_INTEGRATION_COMPLETE.md  error-codes.md  gollek-architecture-flow copy.md  gollek-architecture-flow.md  gollek-disaggregated.md  gollek-orchestrator.md  install-profiles.md  ml-framework-module-migration.md  (+1 more)
engine/: build.gradle.kts
runner/gguf/gguf-bridge/: CMakeLists.txt  gguf_converter.cpp  gguf_converter.hpp  gguf_quantizer.cpp  gguf_quantizer.hpp  gguf_utils.hpp
runner/llamacpp/gguf-bridge/: CMakeLists.txt  gguf_bridge.cpp  gguf_bridge.hpp  gguf_converter.cpp  gguf_utils.cpp
runner/llamacpp/gguf-bridge/tests/: CMakeLists.txt
runner/native/gollek-native-core/: CMakeLists.txt
runner/native/gollek-native-core/include/: gollek_engine_internal.h  gollek_onnx_backend.h  gollek_tflite_backend.h
runner/native/gollek-native-core/platform/: delegate_android.cpp  delegate_desktop.cpp
runner/native/gollek-native-core/platform/desktop/: gollek_desktop_runner.cpp
runner/native/gollek-native-core/platform/web/: gollek_engine.ts
runner/native/gollek-native-core/src/: gollek_engine.cpp  gollek_format.cpp  gollek_tflite_backend.cpp
runner/native/gollek-native-core/tests/: smoke_test_main.cpp
runner/torch/gollek-runner-libtorch/: CMakeLists.txt  build.gradle.kts  build.sh  pom.xml
runner/torch/gollek-runner-libtorch/src/main/cpp/: libtorch_wrapper.cpp
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/: LibTorchAdapterApplier.java  LibTorchAdvancedModeResolver.java  LibTorchChatTemplateService.java  LibTorchDeviceSupport.java  LibTorchExecutionHints.java  LibTorchFp8CalibrationLoader.java  LibTorchFp8CalibrationValidator.java  LibTorchFp8RowwisePlanner.java  LibTorchFp8RowwiseTransformer.java  LibTorchMetrics.java  LibTorchProvider.java  LibTorchSessionManager.java  LibTorchTokenizerManager.java  MixedPrecisionManager.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/binding/: LibTorchBinding.java  NativeLibraryLoader.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/config/: AdapterConfig.java  AdvancedConfig.java  GenerationConfig.java  GpuConfig.java  InferenceConfig.java  LibTorchProviderConfig.java  ModelConfig.java  NativeConfig.java  WarmupConfig.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/core/: Device.java  LibTorchBackend.java  ScalarType.java  TorchTensor.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/nn/: AdaptiveAvgPool2d.java  BatchNorm2d.java  Conv2d.java  Dropout.java  Flatten.java  Functional.java  GELU.java  LayerNorm.java  Linear.java  Loss.java  MaxPool2d.java  Module.java  ReLU.java  Sequential.java  Sigmoid.java  Softmax.java  Tanh.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/optim/: Adam.java  Optimizer.java  SGD.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/plugin/: LibTorchPlugin.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/plugin/builtin/: CoreOpsPlugin.java  NNOpsPlugin.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/sampling/: AutoregressiveGenerator.java  SamplingStrategy.java  TopPSampler.java
runner/torch/gollek-runner-libtorch/src/main/java/tech/kayys/gollek/inference/libtorch/util/: SafetensorsHeaderParser.java  SafetensorsLoader.java
runner/torch/gollek-runner-libtorch/src/test/java/tech/kayys/gollek/inference/libtorch/: ContinuousBatchingPriorityTest.java  LibTorchAdvancedModeResolverTest.java  LibTorchFp8CalibrationLoaderTest.java  LibTorchFp8CalibrationValidatorTest.java  LibTorchFp8RowwiseTransformerTest.java  LibTorchGenerationParamsTest.java  LibTorchProviderTest.java  LibTorchSessionManagerAdapterRoutingTest.java
runner/torch/gollek-runner-libtorch/src/test/java/tech/kayys/gollek/inference/libtorch/core/: LibTorchTensorOpsTest.java
runner/torch/gollek-runner-libtorch/src/test/java/tech/kayys/gollek/inference/libtorch/nn/: LibTorchModuleTest.java
(+7422 files in other folders)
